# demo-jupyter-server

./: .gitignore  .gitignore   Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
server/: Makefile  pyproject.toml  requirements.txt
server/notebooks/: hello.ipynb
